get back check method
